version 2.2
1. Support configuration "PassHeader"
	Thank Hans Christian Saustrup for the suggestion.
2. Support apr_shm_remove() in httpd.2.0.X
	Thank Hans Christian Saustrup for bug report.

version 2.1 ( Feb 15th 2007 )
1. Add missing config.m4 and Makefile.in for static linking
	Thank Mark Drago for notice
2. FCGIWrapper disallowed in .htaccess
	Thank Balinares for patch
3. Bug fix. Authoritative flag reversed
	Thank Chris Darroch for the patch
4. Support arguments in FCGIWrapper
	Thank Andre Nathan for suggestion and great help on testing it.
5. Support new config "SharememPath", which specifies the location of share memory path.
6. Check running user is root or not, while suexec is enabled.
	Thank Chris Holleman for the bug report.
7. Bug fix. Should not pass respond to auth checkers.
	Thank Szabolcs Hock for bug report.

version 2.0 ( Oct 29th 2006 )
1. Support FastCGI Authorizer protocols now.
2. Add apxs compile instruction in INSTALL.txt.
	Thank Hans Christian Saustrup, hc at saustrup.net for the suggestion.
3. Bug fix. (Win32 only) PHP script can not create socket on Win32.
	Thank bbscool at zjip.com for the bug report and the help.
4. GREAT patchs from Robert L Mathews, rob at tigertech.com
	Fix compile warnings
	Adds a MaxRequestsPerProcess parameter that allows mod_fcgid to exit after handling a certain number of requests
	Close socket before fork 
	avoid the 1-second sleep the first time a process is spawned
5. Print warning log while read data error from FastCGI process.
6. Apply patch from Scott Lamb, Fix mod_fcgid 1.10 warnings on x86_64

version 1.10 ( Jul 3rd 2006 )
1. Use poll() instead of select() in UNIX. "It becomes problematic on apache2 with
large number of logfiles. Apache2 calls poll() (when OS supports it), and in that
case it doesn't need to be recompiled with larger FD_SETSIZE. select() is
still limited to FD_SETSIZE." 
	Thank Piotr Gackiewicz gacek at intertele.pl for the patch.