@@ -558,6 +558,9 @@ static const command_rec fcgid_cmds[] = {
 				  "Spawn score up limit"),
 	AP_INIT_TAKE1("SpawnScore", set_spawn_score, NULL, RSRC_CONF,
 				  "Score of spawn"),
+	AP_INIT_TAKE1("TimeScore", set_time_score, NULL,
+				  RSRC_CONF,
+				  "Score of passage of time (in seconds)"),
 	AP_INIT_TAKE1("TerminationScore", set_termination_score, NULL,
 				  RSRC_CONF,
 				  "Score of termination"),
